# vote_server

./: .env  Cargo.toml  votes.db
sql/: create_table.sql  init_db.bat  init_db.sql
src/: lechat.rs  lib.rs  main.lechat.rs  main.old.rs  main.rs  voting.rs
