[package]
name = "vote_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
leptos = "0.7"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
time = "0.3.36"
uuid = "1.11.0"
leptos_router = "0.7.0"
leptos_axum = "0.7.0"
leptos_meta = "0.7.0"
tower = "0.5.1"
tower-http = "0.6.2"
wasm-bindgen = "0.2.97"
